tests/derive_ui/skip_flatten.stderr
error: `flatten` cannot be used with `skip`
  --> tests/derive_ui/skip_flatten.rs:17:18
   |
17 |     #[clap(skip, flatten)]
   |                  ^^^^^^^
